# ElinaFjell

./: .gitignore
C++/: CMakeLists.txt
C++/1_Function_Templates/: CMakeLists.txt  Summary.md  max.hpp  max_constexpr.hpp  max_default_overload.cpp  max_invisible_overload.cpp  max_overload.cpp  max_pointerCstring_overload.cpp  max_reference_overload.cpp
Celestial Mechanics/: Astana.cpp  C20_firstOrder.cpp  CMakeLists.txt  orbit_EarthGravity.cpp  orbit_J2.cpp  orbit_Satellite.cpp  orbit_gravity_drag.cpp  orbit_gravity_pressure.cpp  orbit_noSRP.cpp  oscillator.cpp  oscillator.ipynb
Celestial Mechanics/results/: gravity.csv  gravity_drag.csv  gravity_srp_drag.csv  satellite_RK4.csv  trajectory.ipynb
Celestial Mechanics/results/C20_firstOrder/: Astana.csv
Celestial Mechanics/results/C20_firstOrder/circular/: Astana.csv  Flåm.csv  equatorial.csv  polar.csv
Celestial Mechanics/src/celestial_mechanics/: AccelerationCalculator.hpp
Celestial Mechanics/src/celestial_mechanics/J2/: BDF.hpp  J2.cpp  J2.hpp  explicitRK.hpp
Celestial Mechanics/src/celestial_mechanics/forces/: AtmosphericDrag.hpp  EarthGravity.cpp  EarthGravity.hpp  Eternal.cpp  Eternal.hpp  GOST4401_81.hpp  SolarRadiationPressure.cpp  SolarRadiationPressure.hpp
Celestial Mechanics/src/celestial_mechanics/integration/: Integrator.hpp  Paths.cpp  RHS.hpp
Celestial Mechanics/src/celestial_mechanics/orbital_elements/: AnomalyConverter.cpp  AnomalyConverter.hpp  Elements.cpp  Elements.hpp  ElementsConverter.cpp  ElementsConverter.hpp  Propagator.cpp  Propagator.hpp
Celestial Mechanics/tests/orbital_elements/: test_10.cpp  test_8.cpp  test_9.cpp
Computational Mathematics/: CMakeLists.txt  TransportEquation.cpp  TransportEquationGraphs.ipynb
Computational Mathematics/advection_equation_main/: AdvectionEquation.cpp  CMakeLists.txt  LaxWendroff_animation_1.py  LaxWendroff_animation_2.py  LaxWendroff_animation_3.py  animation_1.py  animation_2.py  animation_3.py  upwind_animation_1.py  upwind_animation_2.py  upwind_animation_3.py
Computational Mathematics/advection_equation_main/resources_for_animation/LaxWendroff_scheme/: 1.csv  1_withoutTime.csv  2_withoutTime.csv  3.csv  3_withoutTime.csv
Computational Mathematics/advection_equation_main/resources_for_animation/upwind_scheme/: 1.csv  1_withoutTime.csv  2.csv  3.csv  3_withoutTime.csv
Computational Mathematics/src/: CMakeLists.txt
Computational Mathematics/src/numerical_analysis/advection_equation/: Grid.hpp  LaxWendroffScheme.cpp  UpwindScheme.cpp
Computational Mathematics/src/numerical_analysis/transport_equation/: Grid.hpp  UpwindScheme.cpp  UpwindScheme.hpp
Computational Mathematics/tests/: CMakeLists.txt
Computational Mathematics/tests/advection_equation/: test_1.cpp
Computational Mathematics/tests/transport_equation/: test_1.cpp
J2/: SymPy.ipynb  computations.ipynb  (+1 more)
(+51 files in other folders)
